--- a/SabadBan/SabadBan/IndexDetailHeader.xib
+++ b/SabadBan/SabadBan/IndexDetailHeader.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,23 +8,31 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailsViewController" customModule="SabadBan" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="IndexDetailHeader" customModule="SabadBan" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="599" height="40"/>
+            <rect key="frame" x="0.0" y="0.0" width="599" height="60"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0ls-ce-fFd">
-                    <rect key="frame" x="0.0" y="0.0" width="599" height="40"/>
+                    <rect key="frame" x="0.0" y="0.0" width="599" height="60"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OeZ-E7-BAl">
-                            <rect key="frame" x="280" y="11" width="38" height="18"/>
+                            <rect key="frame" x="280" y="13" width="38" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vz7-Hu-APW">
+                            <rect key="frame" x="282" y="43" width="36" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" red="0.99044573739999997" green="1" blue="0.95424887199999997" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" red="0.83529411764705885" green="0.36078431372549019" blue="0.27843137254901962" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstItem="OeZ-E7-BAl" firstAttribute="centerY" secondItem="0ls-ce-fFd" secondAttribute="centerY" id="7sm-9g-qJP"/>
+                        <constraint firstItem="OeZ-E7-BAl" firstAttribute="centerY" secondItem="0ls-ce-fFd" secondAttribute="centerY" constant="-8" id="7sm-9g-qJP"/>
+                        <constraint firstItem="vz7-Hu-APW" firstAttribute="centerY" secondItem="0ls-ce-fFd" secondAttribute="centerY" constant="21.5" id="ZSI-Gb-74m"/>
                         <constraint firstItem="OeZ-E7-BAl" firstAttribute="centerX" secondItem="0ls-ce-fFd" secondAttribute="centerX" id="fvg-qR-bw7"/>
+                        <constraint firstItem="vz7-Hu-APW" firstAttribute="centerX" secondItem="0ls-ce-fFd" secondAttribute="centerX" id="uM4-99-0tA"/>
                     </constraints>
                 </view>
             </subviews>
@@ -39,9 +47,10 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="backView" destination="0ls-ce-fFd" id="hcL-IR-Ju0"/>
+                <outlet property="lblLastUpdate" destination="vz7-Hu-APW" id="alN-6n-ALw"/>
                 <outlet property="lblTitle" destination="OeZ-E7-BAl" id="emB-Ot-PuT"/>
             </connections>
-            <point key="canvasLocation" x="334.5" y="134.5"/>
+            <point key="canvasLocation" x="334.5" y="144"/>
         </view>
     </objects>
 </document>
