--- a/SabadBan/SabadBan/MarketDetailsHeader.xib
+++ b/SabadBan/SabadBan/MarketDetailsHeader.xib
@@ -5,9 +5,9 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailsViewController" customModule="SabadBan" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailsViewController" customModule="SabadBan_Dev" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="4mr-9q-aFC" customClass="MarketDetailsHeader" customModule="SabadBan" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="4mr-9q-aFC" customClass="MarketDetailsHeader" customModule="SabadBan_Dev" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
